--- a/app/src/main/res/layout/single_cell_layout.xml
+++ b/app/src/main/res/layout/single_cell_layout.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="@dimen/singlecellw"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="@dimen/paddingsinclecell">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/calendar_day"
-        android:text="1"
+        android:text="@string/calendarday"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:textSize="@dimen/textsizesinglec"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="9sp"
+        android:textSize="@dimen/textsizesc"
         android:id="@+id/events_id"
         android:textColor="@color/white"
         android:layout_gravity="center"/>
