--- a/app/src/main/res/layout/single_cell_layout.xml
+++ b/app/src/main/res/layout/single_cell_layout.xml
@@ -12,13 +12,13 @@
         android:text="@string/calendarday"
         android:textStyle="bold"
         android:layout_gravity="center"
-        android:textSize="@dimen/textsizesinglec"/>
+        android:textSize="20dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textStyle="bold"
-        android:textSize="@dimen/textsizesc"
+        android:textSize="9dp"
         android:id="@+id/events_id"
         android:textColor="@color/white"
         android:layout_gravity="center"/>
